# ructf-2016

./: .gitignore  README.md
433mhz/: both.c  receiver.c  sender.c
checkers/: environ.checker.py
checkers/bluemesh/: bluemesh.checker.py
checkers/cleaner/: cleaner.checker.py
checkers/discoball/: discoball.checker.pl
checkers/environ/: environ.checker-dev.py  environ.checker.py
checkers/fridge/: fridge.checker.py  httpchecker.py
checkers/meters/: .meters.checker.py.swp  meters.checker.py
checkers/socks/: .checker.py.swp  checker.py  things.txt
checkers/strongbox/: httpchecker.py  randomizer.py  strongbox.checker.py
exploits/cleaner/: cleaner.exploit1.py  cleaner.exploit2.py
exploits/environ/: README.md  README_en.md  description-en.md  description-ru.md  sploit.py
exploits/fridge/: README.md  hack1.sh  hack2.sh
exploits/meters/: meters.exploit1.py  meters.exploit2.py
infrastructure/ansible/: README.TXT  cs-app.sh  cs-checkers-loop.sh  cs-checkers.sh  cs-control.sh  cs-install.sh  cs-requirements.sh  cs-router.sh  inventory.cfg
infrastructure/finals/: dhcpd.conf  firewall  interfaces
infrastructure/olymp/: config.ap.template  config.ap1  config.ap2  config.ap3  config.ap4  config.sw  (+2 more)
services/cleaner/: CMakeLists.txt  deploy-service.yml
services/cleaner/files/: cleaner.service
services/cleaner/src/: command.cpp  command.h  main.cpp  parser.cpp  parser.h  pass_checker.cpp  pass_checker.h  program.cpp  program.h  room.cpp  room.h  saveloader.cpp  saveloader.h  servant.cpp  servant.h  server.cpp  server.h  session.cpp  session.h  state.h
(+691 files in other folders)
